ヘッダ作成

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<!– ロゴ –>
+<div class="logo">
+    <a href="index.html"><img src="images/logo.png" height="60" alt="Sample site" /></a>
+</div>
+<!– / ロゴ –>
 </body>
 </html>
