--- a/index.html
+++ b/index.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
+<title>日本黄昏酒場協会</title>
+<meta name="keywords" content="">
+<meta name="description" content="">
+<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+<!--[if lt IE 9]>
+<script src="js/html5.js"></script>
+<script src="js/css3-mediaqueries.js"></script>
+<![endif]-->
+<script src="js/jquery1.7.2.min.js"></script>
+<script src="js/script.js"></script>
 </head>
+
 <body>
+
+<div id="wrapper">
+
+  <header id="header">
+			<h1>このサイトはフィクションです。実在する人物や団体などとは一切関係がありません。</h1>
+	  		<h1>呑んべぇ会の作成した『黄昏酒場』の攻略サイトです。</h1>
+      <!-- ロゴ -->
+		<div class="logo">
+			<a href="index.html"><img src="images/logo.png" width="60" height="60" alt="Sample site" /></a>
+		</div>
+		<!-- / ロゴ -->
+
+	</header>
+
+	<!-- メインナビゲーション -->
+  <nav id="mainNav">
+  	<a class="menu" id="menu"><span>MENU</span></a>
+		<div class="panel">   
+    	<ul>
+    		<li class="active"><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
+				<li><a href="greeting.html"><strong>ごあいさつ</strong><span>Greeting</span></a></li>
+				<li><a href="basic.html"><strong>基本攻略情報</strong><span>Basic Information</span></a></li>
+				<li><a href="1st.html"><strong>1面攻略</strong><span>1st stage</span></a></li>
+				<li><a href="2nd.html"><strong>2面攻略</strong><span>2nd stage</span></a></li>
+				<li><a href="3rd.html"><strong>3面攻略</strong><span>3rd stage</span></a></li>
+			</ul>
+    </div>
+  </nav>
+  <!-- / メインナビゲーション -->
+  
+  <!-- メイン画像 -->
+	<div id="mainBanner">
+		<img src="images/mainImg.jpg" alt="">
+    <div class="slogan">
+			<h2>浅間伊佐美とともに歩む団体です</h2>
+			<p>浅間伊佐美に飲み会の頂点を取らせます<br>革新的な技術で浅間伊佐美を動かす団体を目指します。</p>
+		</div>
+	</div>
+	<!-- / メイン画像 -->
+
+
+ 
+	<!-- フッター -->
+	<footer id="footer">
+		<!-- 左側 -->
+		<div id="info" class="grid">
+			<!-- ロゴ -->
+			<div class="logo">
+				<a href="index.html"><img src="images/logo.png" width="45" height="45" alt="Sample site"></a>
+			</div>
+			<!-- / ロゴ -->
+
+		</div>  
+		<!-- / 左側 -->
+		<!-- 右側 ナビゲーション -->
+		<ul class="footnav">
+			<li><a href="greeting.html">ごあいさつ</a></li>
+			<li><a href="basic.html">基本攻略情報</a></li>
+			<li><a href="1st.html">1面攻略</a></li>
+			<li><a href="2nd.html">2面攻略</a></li>
+			<li><a href="3rd.html">3面攻略</a></li>
+		</ul>
+		<!-- / 右側 ナビゲーション -->
+	</footer>
+	<!-- / フッター -->
+	<address>Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></address>
+</div>
 
 </body>
 </html>
