ごあいさつページ誤字修正

--- a/greeting.html
+++ b/greeting.html
@@ -37,10 +37,10 @@
     	<ul>
     		<li><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
 				<li class="active"><a href="greeting.html"><strong>ごあいさつ</strong><span>Greeting</span></a></li>
-				<li><a href="basic.html"><strong>基本攻略情報</strong><span>Service</span></a></li>
-				<li><a href="1st.html"><strong>1面攻略</strong><span>Approach</span></a></li>
-				<li><a href="2nd.html"><strong>2面攻略</strong><span>Company</span></a></li>
-				<li class="last"><a href="3rd.html"><strong>3面攻略</strong><span>Contact</span></a></li>
+				<li><a href="basic.html"><strong>基本攻略情報</strong><span>Basic Information</span></a></li>
+				<li><a href="1st.html"><strong>1面攻略</strong><span>1st stage</span></a></li>
+				<li><a href="2nd.html"><strong>2面攻略</strong><span>2nd stage</span></a></li>
+				<li class="last"><a href="3rd.html"><strong>3面攻略</strong><span>3rd stage</span></a></li>
 			</ul>   
     </div>
   </nav>
@@ -84,7 +84,7 @@
 	</section>
     
 		<section class="content">
-			<h3 class="heading">会社概要</h3>
+			<h3 class="heading">概要</h3>
       <article>
 				<table class="table">
 				<tr>
