共通している部分を外部のJavaScriptファイルに吐き出した

--- a/greeting.html
+++ b/greeting.html
@@ -19,45 +19,17 @@
 
 <div id="wrapper">
 
-  <header id="header">
-	  <h1>このサイトはフィクションです。実在する人物や団体などとは一切関係がありません。</h1>
-	  <h1>呑んべぇ会の作成した『黄昏酒場』の攻略サイトです。</h1>
-      <!-- ロゴ -->
-		<div class="logo">
-			<a href="index.html"><img src="images/logo.png" width="60" height="60" alt="Sample site" /></a>
-		</div>
-		<!-- / ロゴ -->
+  	<script src="base_page/header.js"></script>
 
-	</header>
-
-	<!-- メインナビゲーション -->
-  <nav id="mainNav">
-  	<a class="menu" id="menu"><span>MENU</span></a>
-		<div class="panel">   
-    	<ul>
-    		<li><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
-				<li class="active"><a href="greeting.html"><strong>ごあいさつ</strong><span>Greeting</span></a></li>
-				<li><a href="basic.html"><strong>基本攻略情報</strong><span>Basic Information</span></a></li>
-				<li><a href="1st.html"><strong>1面攻略</strong><span>1st stage</span></a></li>
-				<li><a href="2nd.html"><strong>2面攻略</strong><span>2nd stage</span></a></li>
-				<li class="last"><a href="3rd.html"><strong>3面攻略</strong><span>3rd stage</span></a></li>
-			</ul>   
-    </div>
-  </nav>
-  <!-- / メインナビゲーション -->
+	<script>
+		var page = 'greeting'
+	</script>
+	<script src="base_page/main_nav.js"></script>
   
   <!-- コンテンツ -->
 	<section id="main">
-  
-  	<!-- メイン画像 -->
-		<div id="mainBanner">
-			<img src="images/mainImg.jpg" width="709" height="140" alt="">
-    	<div class="slogan">
-				<h2>浅間伊佐美とともに歩む団体です</h2>
-				<p>革新的な技術で浅間伊佐美を動かす団体を目指します。</p>
-			</div>
-		</div>
-		<!-- / メイン画像 -->
+
+		<script src="base_page/main_banner.js"></script>
 
 	<section class="content">
 		<h3 class="heading">黄昏酒場とは</h3>
@@ -124,32 +96,8 @@
 	</section>
 	<!-- / コンテンツ -->
 
-
+	<script src="base_page/footer.js"></script>
  
-	<!-- フッター -->
-	<footer id="footer">
-		<!-- 左側 -->
-		<div id="info" class="grid">
-			<!-- ロゴ -->
-			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" width="45" height="45" alt="Sample site"></a>
-			</div>
-			<!-- / ロゴ -->
-
-		</div>  
-		<!-- / 左側 -->
-		<!-- 右側 ナビゲーション -->
-		<ul class="footnav">
-			<li><a href="greeting.html">ごあいさつ</a></li>
-			<li><a href="basic.html">基本攻略情報</a></li>
-			<li><a href="1st.html">1面攻略</a></li>
-			<li><a href="2nd.html">2面攻略</a></li>
-			<li><a href="3rd.html">3面攻略</a></li>
-		</ul>
-		<!-- / 右側 ナビゲーション -->
-	</footer>
-	<!-- / フッター -->
-	<address>Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></address>
 </div>
 
 </body>
