--- a/index.html
+++ b/index.html
@@ -19,32 +19,13 @@
 
 <div id="wrapper">
 
-  <header id="header">
-			<h1>このサイトはフィクションです。実在する人物や団体などとは一切関係がありません。</h1>
-	  		<h1>呑んべぇ会の作成した『黄昏酒場』の攻略サイトです。</h1>
-      <!-- ロゴ -->
-		<div class="logo">
-			<a href="index.html"><img src="images/logo.png" width="60" height="60" alt="Sample site" /></a>
-		</div>
-		<!-- / ロゴ -->
+	<script src="base_page/header.js"></script>
 
-	</header>
+	<script>
+		var page = 'index';
+	</script>
+	<script src="base_page/main_nav.js"></script>
 
-	<!-- メインナビゲーション -->
-  <nav id="mainNav">
-  	<a class="menu" id="menu"><span>MENU</span></a>
-		<div class="panel">   
-    	<ul>
-    		<li class="active"><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
-				<li><a href="greeting.html"><strong>ごあいさつ</strong><span>Greeting</span></a></li>
-				<li><a href="basic.html"><strong>基本攻略情報</strong><span>Basic Information</span></a></li>
-				<li><a href="1st.html"><strong>1面攻略</strong><span>1st stage</span></a></li>
-				<li><a href="2nd.html"><strong>2面攻略</strong><span>2nd stage</span></a></li>
-				<li><a href="3rd.html"><strong>3面攻略</strong><span>3rd stage</span></a></li>
-			</ul>
-    </div>
-  </nav>
-  <!-- / メインナビゲーション -->
   
   <!-- メイン画像 -->
 	<div id="mainBanner">
@@ -57,31 +38,7 @@
 	<!-- / メイン画像 -->
 
 
- 
-	<!-- フッター -->
-	<footer id="footer">
-		<!-- 左側 -->
-		<div id="info" class="grid">
-			<!-- ロゴ -->
-			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" width="45" height="45" alt="Sample site"></a>
-			</div>
-			<!-- / ロゴ -->
-
-		</div>  
-		<!-- / 左側 -->
-		<!-- 右側 ナビゲーション -->
-		<ul class="footnav">
-			<li><a href="greeting.html">ごあいさつ</a></li>
-			<li><a href="basic.html">基本攻略情報</a></li>
-			<li><a href="1st.html">1面攻略</a></li>
-			<li><a href="2nd.html">2面攻略</a></li>
-			<li><a href="3rd.html">3面攻略</a></li>
-		</ul>
-		<!-- / 右側 ナビゲーション -->
-	</footer>
-	<!-- / フッター -->
-	<address>Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></address>
+	<script src="base_page/footer.js"></script>
 </div>
 
 </body>
