作る気もないのに何故かサイドバーを入れた

--- a/basic.html
+++ b/basic.html
@@ -177,6 +177,7 @@
 
         </section>
 
+        <script src="base_page/sidebar.js"></script>
         <script src="base_page/footer.js"></script>
     </div>
 </body>
