--- a/greeting.html
+++ b/greeting.html
@@ -96,6 +96,7 @@
 		</section>
 		<!-- / コンテンツ -->
 
+		<script src="base_page/sidebar.js"></script>
 		<script src="base_page/footer.js"></script>
 
 	</div>
