サイドのトピックス関連 (#9)
* 青カクテルの金額を1499円としていたことの修正

* 作る気もないのに何故かサイドバーを入れた

* 何故かトップページにもサイドバーと同じリンク入れた

* 何故かサイドバーのページを先に作った

--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
 			</div>
 		</div>
 
+		<section class="gridWrapper">
+			<article class="grid">
+				<div class="box">
+					<img src="images/storylarge.jpg" width="260" height="113" alt="">
+					<h3>黄昏酒場ストーリー解説</h3>
+					<p>今からでも遅くない！？黄昏酒場を知らない人のためにストーリーをまるっと紹介！</p>
+					<p class="readmore"><a href="story.html">詳細を確認する</a></p>
+				</div>
+			</article>
+			<article class="grid">
+				<div class="box">
+					<img src="images/weflarge.jpg" width="260" height="113" alt="">
+					<h3>800万オーバーが語る、黄昏酒場の魅力</h3>
+					<p>今明かされる…黄昏酒場をやりこんだものだけが分かる黄昏酒場の世界とは…</p>
+					<p class="readmore"><a href="charm.html">詳細を確認する</a></p>
+				</div>
+			</article>
+			<article class="grid">
+				<div class="box">
+					<img src="images/th08large.jpg" width="260" height="113" alt="">
+					<h3>徹底討論！黄昏酒場は東方なのか？</h3>
+					<p>何かと争いの絶えないこの話題、ついに決着がつく…！</p>
+					<p class="readmore"><a href="istouhou.html">詳細を確認する</a></p>
+				</div>
+			</article>
+		</section>
 
 		<script src="base_page/footer.js"></script>
 	</div>
