攻撃の種類について記述した

--- a/basic.html
+++ b/basic.html
@@ -34,6 +34,72 @@
             <script src="base_page/main_banner.js"></script>
 
             <section class="content">
+                <h3 class="heading">通常ショット</h3>
+                <article>
+                    <img src="images/weapons/NormalShot.jpg" width="120", height="157" alt="" class="alignleft border">
+                    <p>
+                        ショットボタンを連打、もしくは連射ボタンの押しっぱなしで<br>
+                        遠方に向かってお箸を発射します。<br>
+                        後述するビールゲージの量に応じて火力が変わり、<br>
+                        それぞれ1.0, 1.8, 2.0, 2.8になると火力が変わります。<br>
+                        しかし後述する爪楊枝より火力が圧倒的に低いので<br>
+                        近づくとペナルティ弾を吐くボス戦だけを<br>
+                        通常ショットで立ち向かうことになります。
+                    </p>
+                </article>
+            </section>
+
+            <section class="content">
+                <h3 class="heading">チャージショット</h3>
+                <article>
+                    <img src="images/weapons/toothpick.gif" width="180", alt="" class="alignleft border">
+                    <p>
+                        通常ショットボタンを押しっぱなしにすることで<br>
+                        自機の周囲に爪楊枝を展開します。<br>
+                        <br>
+                        さらに、この状態で通常ショットボタンを放すと<br>
+                        自機周囲に展開されている爪楊枝がなくなり、<br>
+                        16フレームかけて自機から爪楊枝が発射されます。<br>
+                        この時完全にランダムな方向に発射されるのではなく、<br>
+                        上->真横->下という順番に発射されます。<br>
+                        さらに自機から発射される都合上、元々自機がいた周辺は空洞になりドーナツのような配置になることにも<br>
+                        注意が必要です。<br>
+                        <br>
+                        さらに設置してから一定フレームたつと近くの料理に向かって飛んでいきます。<br>
+                        射程はすごく狭いのでそこまで信用しない方が良いでしょう。<br>
+                        <br>
+                        この爪楊枝は火力が圧倒的に強く、使える場面では積極的に使うべきです。<br>
+                        通常クリアでも2ボスの五日前のソーダハイ、3ボスの通常2では使うことになるでしょう<br>
+                        スコアアタックだと道中や一部ペナルティ弾の中に入れるボスなどで使用されます。<br>
+                    </p>
+                </article>
+            </section>
+
+            <section class="content">
+                <h3 class="heading">ボム</h3>
+                <article>
+                    <img src="images/weapons/Bomb.jpg" width="120", height="157" alt="" class="alignleft border">
+                    <p>
+                        ボムボタンを押すことで何かを発射します<br>
+                        <br>
+                        ビールゲージ1Lを消費する前方近接攻撃です。<br>
+                        近づけば近づくほど火力が高くなりますが<br>
+                        無敵はボムのエフェクトが出てる瞬間しか存在しません。<br>
+                        ボム中にボスに重なってるとエフェクトがなくなった瞬間に被弾するので<br>
+                        早めに安全圏に下がるのが良いでしょう。<br>
+                        <br>
+                        また、ボムを撃つとビールゲージの最大量が-0.1Lされてしまうので<br>
+                        ボムを撃ちすぎるとビールゲージが最大でもショット火力が最大ではないという状態が<br>
+                        起こりえます。<br>
+                        <br>
+                        さらに被弾してもビールゲージは回復しないため、<br>
+                        通常クリア狙いで危ないシーンになっても決めボムポイントまでボムは撃たないといった戦略も<br>
+                        十分アリでしょう。
+                    </p>
+                </article>
+            </section>
+
+            <section class="content">
                 <h3 class="heading">ビールゲージ</h3>
                 <article>
                     <p>
@@ -174,6 +240,9 @@
                     </p>
                 </article>
             </section>
+
+            <!--TODO 置きボムを書く-->
+            <!--TODO 中避けを書く-->
 
         </section>
 
