面攻略のメニューバーが正しく動作してなかったことの修正

--- a/1st.html
+++ b/1st.html
@@ -22,7 +22,7 @@
     <script src="base_page/header.js"></script>
 
     <script>
-        var page = 'other'
+        var page = '1st'
     </script>
     <script src="base_page/main_nav.js"></script>
 
