置きボムと中避けの追加。あとなんか爪楊枝のgifの画像サイズを小さくした

--- a/basic.html
+++ b/basic.html
@@ -228,6 +228,52 @@
             </section>
 
             <section class="content">
+                <h3 class="heading">置きボム</h3>
+                <article>
+                    <p>
+                        特別メニューはSOSOU(被弾)をするかボムを撃つとおつとめ品になってしまい価格が0円になってしまいます。<br>
+                        しかし特別メニューが始まる直前でボムを撃つと、<br>
+                        特別メニュー中にボムの攻撃判定があるのにおつとめ品にならないという現象が起こります。<br>
+                        これを一般に置きボムといいます。<br>
+                        いかに速く特別メニューを食べきる(撃破する)ことができるかがとても大事なゲームであるので<br>
+                        スコアアタックに置いてとても大事な要素といえるでしょう。
+                    </p>
+                </article>
+            </section>
+
+            <section class="content">
+                <h3 class="heading">中避け</h3>
+                <article>
+                    <img src="images/weapons/nakayoke.gif" width="180"  alt="" class="alignleft border">
+                    <p>
+                        一部の弾幕を除き、ボスは近づくとペナルティ弾を放ってきます。<br>
+                        これによりボス戦は火力の低い通常ショットを用いて長い時間をかけて<br>
+                        料理を食べ(体力を削ら)ざるを得ません。<br>
+                        しかしペナルティ弾の発生源とボスの当たり判定の間に空間があるため、<br>
+                        置きボムの無敵中にその空間に入ることでボスに超接近した状態で<br>
+                        チャージショットを連打し、大食いする(大ダメージを与える)ことができます<br>
+                        <br>
+                        これを中避けといいます。<br>
+                        <br>
+                        一見すごく小さい範囲に見えますが案外位置合わせは簡単です。<br>
+                        ボスに近づくとボスにボムのエフェクトが吸われますが、<br>
+                        一定以上近づくとボムのエフェクトがすり抜けるようになります。<br>
+                        このボムエフェクトがボスをすり抜ける一番低い高さが安全地帯です。<br>
+                        ただしボムエフェクトがすり抜けるということは当然食べられていない(ダメージを与えられていない)ので<br>
+                        ギリギリまで中避けポイントに入らずにボムが終わる直前でポイントに入ると良いでしょう。<br>
+                        <br>
+                        この中避けはどの特別メニューでもできるというわけではなく、以下の条件を満たしていることが必要です。<br>
+                        <br>
+                    </p>
+                    <ul class="list">
+                        <li>・ボスの中央から弾を放つような弾幕ではないこと</li>
+                        <li>・ボスが移動しない弾幕であること</li>
+                        <li>・撃破後にアルコール料理を出さない特別メニューであること(アルコール料理にも当然当たり判定があるため)</li>
+                    </ul>
+                </article>
+            </section>
+
+            <section class="content">
                 <h3 class="heading">参考文献</h3>
                 <article>
                     <p>
