なんかレイアウトが崩れてしまったので直した

--- a/basic.html
+++ b/basic.html
@@ -265,11 +265,11 @@
                         この中避けはどの特別メニューでもできるというわけではなく、以下の条件を満たしていることが必要です。<br>
                         <br>
                     </p>
-                    <ul class="list">
+                    <ol class="list">
                         <li>・ボスの中央から弾を放つような弾幕ではないこと</li>
                         <li>・ボスが移動しない弾幕であること</li>
                         <li>・撃破後にアルコール料理を出さない特別メニューであること(アルコール料理にも当然当たり判定があるため)</li>
-                    </ul>
+                    </ol>
                 </article>
             </section>
 
