概要の作成

--- a/2nd.html
+++ b/2nd.html
@@ -32,10 +32,20 @@
         <script src="base_page/main_banner.js"></script>
 
         <section class="content">
-            <h3 class="heading">二次会攻略</h3>
+            <h3 class="heading">二次会攻略概要</h3>
             <article>
                 <p>
-                    TBW
+                    二次会はそこまで難しくありません。<br>
+                    初クリア目指しでも気を付けるべき点は<br>
+                    2ボス(有江ルミ)の登場エフェクト時の体当たりや、五日前のソーダハイの初見殺し程度でしょう。<br>
+                    <br>
+                    しかしスコアアタックだとそうはいきません。<br>
+                    700万円程度ならまだしも700万円後半になってくると<br>
+                    2ボス通常2、通称『運命のダイスロール』に挑む必要があります。<br>
+                    後述しますがこの弾幕はうまく繋がれば非常に稼げますが配置が悪かったりすると大損になってしまう、<br>
+                    非常に運が絡む稼ぎ(払い?)ポイントです。<br>
+                    <br>
+                    逆にいうとそこを除けば簡単な会といって差し支えないでしょう。<br>
                 </p>
             </article>
         </section>
