文だけ書いた。

--- a/2nd.html
+++ b/2nd.html
@@ -50,6 +50,161 @@
             </article>
         </section>
 
+        <section class="content">
+            <h3 class="heading">会の開幕</h3>
+            <article>
+                <p>
+                    上から出されるワインよりチーズの方に特上持って行った方が高いですが<br>
+                    誤差なので気持ちワイン速く倒したいな～くらいに考えればいいです。<br>
+                    知らんけど。<br>
+                </p>
+            </article>
+        </section>
+
+        <section class="content">
+            <h3 class="heading">カクテル行列</h3>
+            <article>
+                <p>
+                    左右から下に向かってカクテルが出された後<br>
+                    画面上左から出てくる青カクテルに向かって繋ぎたいです。<br>
+                    そのためには左から4列目が出てきたタイミングで駆け上がり、<br>
+                    4列目のカクテル列をコンボ繋げるための通り道にするイメージで通ると<br>
+                    青カクテルに繋がります。<br>
+                    そのまま爪楊枝を設置して右に移動し右の青カクテルまで繋げます。<br>
+                    その後の下の左右から出てくるナッツにも繋げられますが<br>
+                    ここ繋いだところでクリアボーナス込みで結局1万弱しか伸びないので<br>
+                    無理にやろうとして青カクテルのコンボミスするくらいだったら<br>
+                    コンボ切ってもいいでしょう。
+                </p>
+            </article>
+        </section>
+
+        <section class="content">
+            <h3 class="heading">チーズ＆ピザ</h3>
+            <article>
+                <p>
+                    左上からチーズ、右下からピザが出てきた後<br>
+                    右上からチーズ、左下からピザが出てきます。<br>
+                    みたまんまの地帯ではありますが左下から出てくるピザは至高で繋げられます。<br>
+                    ピザの至高はこの飲み会(ゲーム)において一番価格が高いので<br>
+                    繋げられると嬉しくなります。
+                </p>
+            </article>
+        </section>
+
+
+        <section class="content">
+            <h3 class="heading">ピザ5連打</h3>
+            <article>
+                <p>
+                    最初の3枚くらいに向かって爪楊枝を置いた後に<br>
+                    ラスト2枚くらいをショットで炙ると一気にピザを食べきれてお得です。<br>
+                    美味く(上手く)繋がると1万円弱伸びます。<br>
+                </p>
+            </article>
+        </section>
+
+        <section class="content">
+            <h3 class="heading">チーズとシャーベット</h3>
+            <article>
+                <p>
+                    最後の場面は左右から出てくるチーズを倒し切ると<br>
+                    その瞬間デザートのシャーベットが出てきます。<br>
+                    価格設定はチーズもシャーベットも同じですが<br>
+                    最後のチーズを下の方で倒してしまうと<br>
+                    その直後に出されるシャーベットをかなり取り逃してしまうので<br>
+                    敢えて最後のチーズ2, 3個はコンボを切り、右上に駆け上がって逃げていく直前で食べて(倒して)<br>
+                    爪楊枝を装備して余裕をもってシャーベットを対処しに行くと完食できます。<br>
+                    また、その後に2ボスの有江ルミが剛速球で轢きに来るので<br>
+                    上に向かって逃げると良いでしょう。<br>
+                    私の場合下がろうとすると高さを見誤って逆に轢かれることがありましたが<br>
+                    最上段に向かって逃げる分には絶対に高さを見誤らないので<br>
+                    上に向かって逃げるのをお勧めします。
+                </p>
+            </article>
+        </section>
+
+
+        <section class="content">
+            <h3 class="heading">2ボス通常1</h3>
+            <article>
+                <p>
+                    ペナルティ弾を撃ってこないので爪楊枝が使えます。<br>
+                    素早く倒せると退店時の会計も割高になってしまって嬉しい(悲しい)ですね。
+                </p>
+            </article>
+        </section>
+
+        <section class="content">
+            <h3 class="heading">一品目　焼酎カクテル「大魔王オレンジ＆ザクロ」</h3>
+            <article>
+                <p>
+                    置きボムを使います。<br>
+                    通常1の撃破時にボスの定位置付近に爪楊枝を置いていると<br>
+                    最初の剛速球ザクロをほんの少しだけ避ければ<br>
+                    オレンジが来る前に終わって価格が高くなる気がします。<br>
+                    ただし爪楊枝を設置中にボムを撃つと爪楊枝の設置がキャンセルされてしまうことや<br>
+                    そもそも剛速球ザクロを運ゲーするのはかなりきついので<br>
+                    実用性は低いです。<br>
+                    823万円のプレイでもここは妥協しています。<br>
+                </p>
+            </article>
+        </section>
+
+
+        <section class="content">
+            <h3 class="heading">2ボス通常2　通称 運命のダイスロール</h3>
+            <article>
+                <p>
+                    下位パだとショットで1波毎に繋げるだけで簡単ですが<br>
+                    上位パは爪楊枝を下に2つ設置して奇数波を爪楊枝で倒しつつ<br>
+                    偶数波はショットで取って2波一気に取ってコンボを繋ぎます。<br>
+                    上位パはカクテルの配置運にも左右されますが57万円くらい伸びるのでやるしかありません。<br>
+                    他人様に教えられるほど上手くはないのですが、自分の動きでは<br>
+                    ボスの移動して壁にタッチしたときの効果音の2回目のタイミングで爪楊枝を設置しています。<br>
+                    <br>
+                    ただ、それよりも大事なことは無理して全てのカクテルを取ってはいけないということです。<br>
+                    無理して全てのカクテルを取ろうとしてコンボを切ってしまうと大損害(安く済んでしまう)になってしまいます。<br>
+                    特に偶数波左端に配置されるカクテルはとても取りづらく、<br>
+                    無理して取ろうと左待機していると大抵コンボが切れます。<br>
+                    安定させるためにも呑めないと思ったカクテルは残すのが良いでしょう。<br>
+
+                </p>
+            </article>
+        </section>
+
+
+        <section class="content">
+            <h3 class="heading">二品目　ビールカクテル「キリン塩味」</h3>
+            <article>
+                <p>
+                    運命のダイスロールを抜けた後は楽園が広がっています。<br>
+                    キリン塩味はノーミスノーボム目指すなら崩壊ポイントではありますが<br>
+                    スコアアタックなら中避けするのでかなり簡単です。<br>
+                    <br>
+                    関係ないですがこのメニューはビールのシュワシュワ感をすごく表現できていて<br>
+                    美しいですね<br>
+                </p>
+            </article>
+        </section>
+
+
+        <section class="content">
+            <h3 class="heading">三品目　古酒「五日前のソーダハイ」</h3>
+            <article>
+                <p>
+                    周囲から来るポイフル弾が爪楊枝や箸を当てると消えることを知らないとダメな<br>
+                    初見殺しなメニューとして名高いソーダハイです。<br>
+                    <br>
+                    なんとこのメニューもスコアアタックでは避けなくて大丈夫です。<br>
+                    キリン塩味を撃破したらそのままの位置で爪楊枝を設置しまくってください。<br>
+                    その後ボスが画面の四隅に向かって移動するので移動したら少しだけ下に下がってください。<br>
+                    その上で爪楊枝連打しているとボスの放つ青弾を避けずに倒れます。<br>
+                    ちなみにずっとキリン塩味の中避け位置にいると四隅から戻ってきたタイミングで轢かれます。<br>
+                </p>
+            </article>
+        </section>
+
     </section>
 
     <script src="base_page/sidebar.js"></script>
