SOSOU時の詳細を書いた

--- a/basic.html
+++ b/basic.html
@@ -114,9 +114,37 @@
                 <h3 class="heading">時間</h3>
                 <article>
                     <p>
-                        SOSOU(被弾)すると時間が経過してしまいますが、その時間は一定ではないことがわかっています。<br>
-                        なお詳しい原理はわかっていません。
+                        SOSOU(被弾)すると時間が経過してしまいます。<br>
+                        m面でn回目に被弾したときに経過する時間T_m(n)は以下の通りです。<br>
+                        ただし3面は6被弾目が312秒が314秒であったり、6被弾目が312秒であったりと、<br>
+                        分単位で割り切れない都合上おかしい動作があるようです。<br>
+                        <br>
+                        1面: T_1(n) =   24 +   6(n - 1)       (分)<br>
+                        2面: T_2(n) =   12 +   4(n - 1)       (分)<br>
+                        3面: T_3(n) = (939 + 313(n - 1)) / 60 (分)<br>
+                        <br>
+                        これをもとにn被弾したときに全被弾合計で進んだ分数S_m(n)は下記の通りです。<br>
+                        <br>
+                        1面: S_1(n) = n(  24 +   3(n - 1))       (分)<br>
+                        2面: S_2(n) = n(  12 +   2(n - 1))       (分)<br>
+                        3面: S_3(n) = n(1878 + 313(n - 1)) / 120 (分)<br>
+                        <br>
+                        さらにS_m(n)を後述するサービス料の損失P_m(n)になおすと以下のようになります。<br>
+                        <br>
+                        1面: P_1(n) = n(  24 +   3(n - 1)) / 8    (%)<br>
+                        2面: P_2(n) = n(  12 +   2(n - 1)) / 6    (%)<br>
+                        3面: P_3(n) = n(1878 + 313(n - 1)) / 1200 (%)<br>
+                        <br>
+                        立式すれば分かりやすいだろと思ったら思いのほか分かりにくかったので<br>
+                        各被弾数におけるP_m(n)を表に直してみました<br>
+                        <br>
                     </p>
+                    <table class="table">
+                        <tr><td>面</td><td>1被弾目 (%)</td><td>2被弾目 (%)</td><td>3被弾目 (%)</td><td>4被弾目 (%)</td></tr>
+                        <tr><td>1</td><td>3</td><td>6.75</td><td>11.25</td><td>16.5</td></tr>
+                        <tr><td>2</td><td>2</td><td>4.667</td><td>8</td><td>12</td></tr>
+                        <tr><td>3</td><td>1.565</td><td>3.652</td><td>6.26</td><td>9.39</td></tr>
+                    </table>
                 </article>
             </section>
 
