数字がおかしかったのを修正

--- a/basic.html
+++ b/basic.html
@@ -116,7 +116,7 @@
                     <p>
                         SOSOU(被弾)すると時間が経過してしまいます。<br>
                         m面でn回目に被弾したときに経過する時間T_m(n)は以下の通りです。<br>
-                        ただし3面は6被弾目が312秒が314秒であったり、6被弾目が312秒であったりと、<br>
+                        ただし3面は5被弾目の公差313秒が314秒であったり、6被弾目が312秒であったりと、<br>
                         分単位で割り切れない都合上おかしい動作があるようです。<br>
                         <br>
                         1面: T_1(n) =   24 +   6(n - 1)       (分)<br>
