faviconとapple-touch-iconの設定

--- a/greeting.html
+++ b/greeting.html
@@ -14,7 +14,8 @@
 	<![endif]-->
 	<script src="js/jquery1.7.2.min.js"></script>
 	<script src="js/script.js"></script>
-
+	<link rel="icon" href="images/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch.png">
 </head>
 
 <body id="subpage">
