サブページの構成を変えた

--- a/links.html
+++ b/links.html
@@ -23,7 +23,7 @@
     <script src="base_page/header.js"></script>
 
     <script>
-        var page = '1st'
+        var page = '3rd'
     </script>
     <script src="base_page/main_nav.js"></script>
 
@@ -33,11 +33,30 @@
         <script src="base_page/main_banner.js"></script>
 
         <section class="content">
-            <h3 class="heading">一次会攻略</h3>
+            <h3 class="heading">リンク集</h3>
             <article>
-                <p>
-                    TBW
-                </p>
+                <table class="table">
+                    <caption>関連するページ一覧です</caption>
+                    <tr>
+                        <th><a href="index.html">日本黄昏酒場協会<br></a></th>
+                        <td>このページです。</td>
+                    </tr>
+                    <tr>
+                        <th><a href="https://alcostg-score.wefma.net">黄昏酒場スコアボード</a></th>
+                        <td>黄昏酒場スコアボードです。スコアタだけではなく貴方だけの黄昏酒場プレイを上げましょう。</td>
+                    </tr>
+                    <tr>
+                        <th><a href="https://x.com/iyuzzuko">twitter</a></th>
+                        <td>会長のTwitterです。</td>
+                    </tr>
+                    <tr>
+                        <th><a href="https://wefmaika.hatenablog.com/">旧日本黄昏酒場協会ページ</a></th>
+
+                        <td>日本黄昏酒場協会の旧公式ページです。</td>
+                    </tr>
+                    <tr>
+
+                </table>
             </article>
         </section>
 
